updated todo list
git-svn-id: svn+ssh://localhost/var/local/svn/menace@44 b7dc2feb-abe1-49e5-b0b8-892bdb346a61

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,21 +1,8 @@
 todo:
-- add game over
-	- na game over naar introscherm
-- hengst op spatie ofzo in het introscherm
-> gfx tcf'en
-	+ tni logo
-	+ intro
-	> ingame
-		+ sprites
-		+ patterns
-		- colors		(levels.asm)
-		- floor patterns	(levels.asm)
-		- floor colors		(levels.asm)
-		- enemy patterns	(enemy.asm)
-		- enemy colors		(enemy.asm)
-	+ 'demo' pictures
-- pt3 vervangen voor guyver5
-- muziek toevoegen
-- 'waar blijft mijn raket' met spatie ingedrukt
-- ending toevoegen
-	- na ending tni logo
+- enemy bombs
+- update floor where bomb has landed
+- variabele difficulty of the meteors
+
+in case of music:
+- replace pt3 with guyver5
+	- add music
